<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Teman Muslim</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="null_string">value</string>
    <string name="hadists" tools:ignore="StringEscaping">Dari Abu 'Ayyasy, sesungguhnya Rasulullah SAW, bersabda, "Siapa yang mengucapkan ketika pagi hari 'laa ilaaha illallah...' adalah baginya sebanding dengan memerdekakan budak dari putra Isma'il, ditulis untuknya sepuluh kebaikan, dihapus sepuluh kesalahan, diangkat sepuluh derajat, dan adalah dia dalam penjagaan dari setan hingga sore, dan jika ia baca ketika masuk sore maka baginya seperti itu pula."</string>
    <string name="hadistr">HR. Abu Dawud</string>
    <string name="artialfatihah">(1) Dengan menyebut nama Allah Yang Maha Pemurah lagi Maha Penyayang. (2) Segala puji bagi Allah, Tuhan
semesta alam, (3) Maha Pemurah lagi Maha Penyayang, (4) Yang menguasai hari pembalasan. (5) Hanya kepada
Engkaulah kami menyembah dan hanya kepada Engkaulah kami mohon pertolongan (6) Tunjukilah kami jalan yang
lurus, (7) (yaitu) jalan orang-orang yang telah Engkau anugerahkan nikmat kepada mereka, bukan (jalan) mereka
yang dimurkai dan bukan (pula jalan) mereka yang sesat. (Al-Fatihah:1-7)
</string>
    <string name="latinalfatihah">[1] Bismillaahir rohmaanir rohiim. [2] Alhamdulillahi rob-bil ààlamiin [3] Ar-rohmaanir rohiim [4]
maaliki yawmid diin [5] iy-yaaka na’budu wa iy-yaaka nasta-ììn [6] ihdinaash shiroothol mustaqiim
[7] shiroothol ladziina an-àmta àlayhim ghoyril magh-dhubi àlayhim wa laadh dhoooool-liin</string>
    <string name="arti15">Dengan menyebut nama Allah Yang Maha Pemurah lagi Maha Penyayang. (1) Alif Laam Miim. (2) Kitab (Al Qur\'an)
ini tidak ada keraguan padanya; petunjuk bagi mereka yang bertakwa, (3) (yaitu) mereka yang beriman kepada yang
gaib, yang mendirikan shalat dan menafkahkan sebahagian rezki yang Kami anugerahkan kepada mereka,(4) dan
mereka yang beriman kepada Kitab (Al Qur'an) yang telah diturunkan kepadamu dan Kitab-kitab yang telah
diturunkan sebelummu, serta mereka yakin akan adanya (kehidupan) akhirat.(5) Mereka itulah yang tetap mendapat
petunjuk dari Tuhan mereka, dan merekalah orang-orang yang beruntung. (Al-Baqarah: 1-5) </string>
    <string name="latin15">Bismillaahir rohmaanir rohiim. [1] Alif Laaaaam Miiiiim. [2] Zaalikal kitaabu laa royba fiihi hudal
lil mut-taqiin [3] Al-ladziina yu’minuuna bil ghoybi wa yuqiimuunash sholaata wa mim-maa rozaq
naahum yumm fiquun [4] wal ladziina yu’minuuna bimaaaaa ungzila ilayka wa maaaaa ungzila
ming qoblik, wa bil akhiroti hum yuuqinuun [5] u-laaaaa-ika àlaa hud-dam mir-rob-bihim wa ulaaaaaika humul muf-lihuun. </string>
    <string name="latinkursi">[255] Alloohu laaaaa ilaaha il-la huwal hay-yul qoy-yum, laa ta’khudzuhu sinatu wa laa nauum,
lahuu maa fiiiiis samaawaati wa maa fiil ardh, mang zaaaaal ladzii yasy-fau ínndahuuuuu il-la bi idznihi, ya’ lamu maa bayna ay-diihim, wa maa khol-fahum, wa laa yuhi-tuuna bi-syay-im min ìlmihiiiii
il-la bi maa syaaaaa‘, wa si-à kursii yuhus samaawaati wal ardh, wa laa ya’-uuduhuu hif-zhu humaa,
wa huwal àlii-yul àzhiim. [256] Laaaaa ikrooha fiiiiid-diin, qot-tabay-yanar rusy-du minal ghoy-yi,
famay yakfur bith-thoo-guuti wa yu’mimm bil-laahi faqodis tamsaka bil úrwatil wuts-qoo laamm
fishooma laha, wal-loohu sa-miiun àliim. [257] Alloohu waliiyul ladziina aa-manuu yukhriju humm
minazh zhulumaati ilan-nuur, wal ladziina kafaruuuuu awli-yaaaaaa-u humuth thoo-guuthi yukri
juuna-huumm minan nuuri il-lazh zhulumaah, u-laaaaa-i-ka ash-haabun naa-ri hum fii-haa khooliduun. </string>
    <string name="artikursi">(255) Allah, tidak ada Tuhan (yang berhak disembah) melainkan Dia Yang Hidup kekal lagi terus menerus mengurus
(makhluk-Nya); tidak mengantuk dan tidak tidur. Kepunyaan-Nya apa yang di langit dan di bumi. Tiada yang dapat
memberi syafaat di sisi Allah tanpa izin-Nya. Allah mengetahui apa-apa yang di hadapan mereka dan di belakang
mereka, dan mereka tidak mengetahui apa-apa dari ilmu Allah melainkan apa yang dikehendaki-Nya. Kursi Allah
meliputi langit dan bumi. Dan Allah tidak merasa berat memelihara keduanya, dan Allah Maha Tinggi lagi Maha
Besar. (256) Tidak ada paksaan untuk (memasuki) agama (Islam); sesungguhnya telah jelas jalan yang benar
daripada jalan yang sesat. Karena itu barang siapa yang ingkar kepada Thaghut dan beriman kepada Allah, maka
sesungguhnya ia telah berpegang kepada buhul tali yang amat kuat yang tidak akan putus. Dan Allah Maha
Mendengar lagi Maha Mengetahui. (257) Allah Pelindung orang-orang yang beriman; Dia mengeluarkan mereka dari
kegelapan (kekafiran) kepada cahaya (iman). Dan orang-orang yang kafir, pelindung-pelindungnya ialah setan, yang
mengeluarkan mereka dari cahaya kepada kegelapan (kekafiran). Mereka itu adalah penghuni neraka; mereka kekal
di dalamnya. (Al-Baqarah: 255-257) </string>
    <string name="latinbaqarah">[284] Lil-laahi maa fiiiiis samaawaati wa maa fiil ardh, wa inn-tubduu maa fiiiii amm-fusikum aw
tukhfuuhu yuhaasib-kum bihil-laah, fayagh-firu limay ya-syaaaaa’-u wa yuádz-dzibu may yasyaaaaa’, wal-loohu álaa kul-li syay-ing qodiir. [285] aamanar rosuulu bimaaaaa ungzila ilayhi mirrob-bihii wal mu’minuun, kul-lun aamana bil-laahi wa malaaaaa-ikatihii wa kutubihii wa rusulihi, laa
nufar-riqu bayna ahadim mir rusulihi, wa qooluu sami’naa wa atho’naa ghufroonaka rob-banaa wa
ilaykal mashiir. [286] Laa yukal-liful-loohu nafsan il-laa wus-à-ha, lahaa maa kasabat wa álay-haa
mak-tasabat, rob-banaa laa tu’-akhidz-naaaaa inn-na siinaaaaa aw akh-tho’-na, rob-banaa wa laa
tahmil álaynaaaaa isrong kamaa hamaltahuu àlal-ladziina ming qoblina, rob-banaa wa laa tuhammilnaa maa laa thooqota lanaa bihi, wa’fu-àn-naa wagh-fir lanaa war ham-naaaaa, annta maw-laanaa
fang-shurnaa àlal qowmil kaafiriin. </string>
    <string name="artibaqarah">(284) Kepunyaan Allah-lah segala apa yang ada di langit dan apa yang ada di bumi. Dan jika kamu melahirkan apa
yang ada di dalam hatimu atau kamu menyembunyikannya, niscaya Allah akan membuat perhitungan dengan kamu
tentang perbuatanmu itu. Maka Allah mengampuni siapa yang dikehendaki-Nya dan menyiksa siapa yang
dikehendaki-Nya; dan Allah Maha Kuasa atas segala sesuatu.(285) Rasul telah beriman kepada Al Qur\'an yang
diturunkan kepadanya dari Tuhannya, demikian pula orang-orang yang beriman. Semuanya beriman kepada Allah,
malaikat-malaikat-Nya, kitab-kitab-Nya dan rasul-rasul-Nya. (Mereka mengatakan): "Kami tidak membeda-bedakan
        antara seseorang pun (dengan yang lain) dari Rasul Rasul-Nya", dan mereka mengatakan: "Kami dengar dan kami
    taat". (Mereka berdoa):"Ampunilah kami ya Tuhan kami dan kepada Engkaulah tempat kembali".(286) Allah tidak
    membebani seseorang melainkan sesuai dengan kesanggupannya. Ia mendapat pahala (dari kebajikan) yang
    diusahakannya dan ia mendapat siksa (dari kejahatan) yang dikerjakannya. (Mereka berdo`a): "Ya Tuhan kami,
    janganlah Engkau hukum kami jika kami lupa atau kami tersalah. Ya Tuhan kami, janganlah Engkau bebankan
    kepada kami beban yang berat sebagaimana Engkau bebankan kepada orang-orang yang sebelum kami. Ya Tuhan
    kami, janganlah Engkau pikulkan kepada kami apa yang tak sanggup kami memikulnya. Beri maaflah kami;
    ampunilah kami; dan rahmatilah kami. Engkaulah Penolong kami, maka tolonglah kami terhadap kaum yang kafir". (AlBaqarah : 284-286)</string>
    <string name="latinalikhlas">Bismillaahir rohmaanir rohiim [1] qul huwal-loohu ahadd [2] Alloohush shomadd [3] lam yalid wa
lam yuladd [4] wa lam yakul lahuu kufuwan ahadd. (3x)</string>
    <string name="artialikhlas">Dengan menyebut nama Allah Yang Maha Pemurah lagi Maha Penyayang. (1) Katakanlah: "Dia-lah Allah, Yang
Maha Esa, (2) Allah adalah Tuhan yang bergantung kepada-Nya segala sesuatu.(3) Dia tiada beranak dan tiada pula
diperanakkan, (4) dan tidak ada seorang pun yang setara dengan Dia." (Al-Ikhlas : 1-4) [dibaca 3 x]</string>
    <string name="latinalfalaq">Bismillaahir rohmaanir rohiim [1] Qul a-ùùdzu birob-bil falaqq [2] ming syar-ri maa kholaqq [3] wa
ming syar-ri ghoosiqin i-dzaa waqobb [4] wa ming syar-rin nafaa-tsaati fiil ùqodd [5] wa ming syar-ri
haasidin i-dzaa hasadd. (3x)</string>
    <string name="artialfalaq">Dengan menyebut nama Allah Yang Maha Pemurah lagi Maha Penyayang. (1) Katakanlah: "Aku berlindung kepada
Tuhan Yang Menguasai subuh,(2) dari kejahatan makhluk-Nya,(3) dan dari kejahatan malam apabila telah gelap
gulita,(4) dan dari kejahatan wanita-wanita tukang sihir yang menghembus pada buhul-buhul,(5) dan dari kejahatan
orang yang dengki apabila ia dengki." (Al-Falaq : 1-5) [dibaca 3 x]</string>
    <string name="latinannas">Bismillaahir rohmaanir rohiim [1] qul a-ùùdzu bi rob-bin naas [2] malikin naas [3] i-laahin naas [4]
ming syar-ril was waasil khon-naas [5] Al-ladzii yuwas-wisu fii shuduurin naas [6] minal jin-nati wannaas. (3x)</string>
    <string name="niatpuasa">نَوَيْتُ صَوْمَ غَدٍ عَنْ اَدَاءِ فَرْضِ شَهْرِ رَمَضَانَ هذِهِ السَّنَةِ ِللهِ تَعَالَى</string>
    <string name="latin1">"Nawaitu Shauma Ghodin 'an Adaa'i Fardhi Syahri Romadhoona Haadzihis Sanati Lillahi Ta'ala"</string>
    <string name="arti1">"Artinya : Saya niat berpuasa esok hari untuk menunaikan kewajiban di bulan Ramadhan tahun ini, karena Allah Ta'ala."</string>
    <string name="tarawihmkm">اُصَلِّى سُنَّةَ التَّرَاوِيْحِ رَكْعَتَيْنِ مُسْتَقْبِلَ الْقِبْلَةِ مَأْمُوْمًا ِللهِ تَعَالَى</string>
    <string name="latintrwmkm">"Usholli Sunnatat-taraawiihi rok'ataini mustaqbilal qiblati ma'muuman lillaahi ta'alaa"</string>
    <string name="artitrwmkm">Artinya : "Saya niat salat sunah tarawih dua rakaat menghadap kiblat sebagai makmum karena Allah Ta'ala"</string>
    <string name="tarawihsdr">اُصَلِّى سُنَّةَ التَّرَاوِيْحِ رَكْعَتَيْنِ مُسْتَقْبِلَ الْقِبْلَةِ ِللهِ تَعَالَى</string>
    <string name="latintrwsdr">"Ushollii Sunnatat-Taraawiihi Rok'ataini Mustaqbilal Qiblati Lillaahi Ta'alaa"</string>
    <string name="artitrwsdr">"Artinya : Saya niat salat sunah tarawih dua rakaat menghadap kiblat karena Allah Ta'ala "</string>
    <string name="witir1">اُصَلِّى سُنًّةَ الْوِتْرِرَكْعَةً مُسْتَقْبِلَ الْقِبْلَةِ اَدَاءً مَأْمُوْمًا ِللهِ تَعَالَى</string>
    <string name="latinwtr1">"Usholli Sunnatal witri Rak'atan Mustaqbilal Qiblati Adaa'an Ma'muuman Lillaahi Ta'ala"</string>
    <string name="artiwtr1">"Artinya : Saya niat salat witir satu rakaat menghadap kiblat sebagai makmum karena Allah Ta'ala"</string>
    <string name="witir2">"اُصَلِّى سُنًّةَ الْوِتْرِرَكْعَتَيْنِ مُسْتَقْبِلَ الْقِبْلَةِ اَدَاءً مَأْمُوْمًا ِللهِ تَعَالَى"</string>
    <string name="latinwtr2">"Ushollii Sunnatal Witri Rok'ataini Mustaqbilal Qiblati Adaa'an Ma'muuman Lillaahi Ta'ala"</string>
    <string name="artiwtr2">"Artinya : Saya niat salat witir dua rakaat menghadap kiblat sebagai makmum karena Allah Ta'ala"</string>
    <string name="witir3">اُصَلِّى سُنًّةَ الْوِتْرِ ثَلاَثَ رَكَعَاتٍ مُسْتَقْبِلَ الْقِبْلَةِ اَدَاءً مَأْمُوْمًا ِللهِ تَعَالَى</string>
    <string name="latinwtr3">"Ushollii Sunnatal Witri Tsalaatsa Raka'aatin Mustaqbilal Qiblati Adaa'an Ma'muuman Lillaahi Ta'ala"</string>
    <string name="artiwtr3">"Artinya : Saya niat salat witir tiga rakaat menghadap kiblat sebagai makmum karena Allah Ta'ala"</string>
    <string name="itikaf">نَوَيْتُالْاِعْتِكَافَ لِلّٰهِ تَعَالٰى</string>
    <string name="latinitikaf">Nawaitul I’tikaafa lilaahi ta’ala.</string>
    <string name="artiitikaf">"Artinya : Saya niat I’tikaf karena iman dan mengharap akan Allah, karena Allah ta’ala."</string>
    <string name="lailatul">اَللهُمَّ إِنَّكَ عَفُوٌّ تُحِبُّ الْعَفْوَ فَاعْفُ عَنِّى</string>
    <string name="latinlailatul">"Allaahuma Innaka'Afuwwun Tuhibbul 'Afwa fa'fu 'Annii"</string>
    <string name="artilailatul">"Artinya : Ya Allah, Engkau Maha Pemaaf dan Engkau mencintai orang yang meminta maaf, karenanya maafkanlah aku"</string>
</resources>