<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:background="@drawable/bg_niatpuasa"
    tools:context="tech.toughput.mobiledzikir.SolatTarawihActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Niat Sholat Tarawih (Sendiri)"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20dp"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="26dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/tarawihsdr"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="17dp"
            android:fontFamily="sans-serif"
            android:text="@string/latintrwsdr"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="italic"
            android:textSize="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/artitrwsdr"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:text="Niat Sholat Tarawih (Ma'mum)"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20dp"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="26dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/tarawihmkm"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="17dp"
            android:fontFamily="sans-serif"
            android:text="@string/latintrwmkm"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="italic"
            android:textSize="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/artitrwmkm"
            android:textAlignment="center"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
