<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:background="@drawable/bg_niatpuasa"
    tools:context="tech.toughput.mobiledzikir.NiatPuasaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="Doa Niat Berpuasa"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textSize="26sp"
            android:fontFamily="sans-serif"
            android:text="@string/niatpuasa"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="17sp"
            android:fontFamily="sans-serif"
            android:text="@string/latin1"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="italic"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:text="@string/arti1"
            android:textAlignment="center"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
