<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:background="@drawable/bg_niatpuasa"
    tools:context="tech.toughput.mobiledzikir.ItikafSunahActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_marginTop="120dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Niat / Doa Berdiam (I'tikaf)"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textSize="26dp"
            android:fontFamily="sans-serif"
            android:text="@string/itikaf"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="17dp"
            android:fontFamily="sans-serif"
            android:text="@string/latinitikaf"
            android:textAlignment="center"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="15dp"
            android:textStyle="italic"
            android:textSize="16dp"
            android:fontFamily="sans-serif"
            android:text= "@string/artiitikaf"
            android:textAlignment="center"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
